create SplashTests, create RegistrationTests,create LoginTests