@@ -30,5 +30,10 @@ dependencies {
 }
 
 test {
-    useTestNG()
+    useTestNG() // или useJUnitPlatform()
+    jvmArgs(
+            '--add-opens=java.base/java.lang=ALL-UNNAMED',
+            '--add-opens=java.base/java.io=ALL-UNNAMED',
+            '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED'
+    )
 }
